--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   mysql:
     image: mysql:8.0
-    container_name: mysql
+    container_name: hackathon_mysql
     restart: always
     environment:
       MYSQL_DATABASE: db
@@ -20,7 +20,7 @@ services:
 
   backend:
     build: ./backend
-    container_name: backend
+    container_name: hackathon_backend
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
       - ./backend:/code
@@ -36,13 +36,22 @@ services:
 
   frontend:
     build: ./frontend
-    container_name: frontend
+    container_name: hackathon_frontend
     volumes:
       - ./frontend:/app
       - /app/node_modules
     ports:
       - "3000:3000"
     command: npm run dev
+
+  voicevox:
+    image: voicevox/voicevox_engine:latest
+    container_name: hackathon_voicevox
+    ports:
+      - "50021:50021"
+    environment:
+      - VOICEVOX_CORE_VERSION=0.24.1
+    restart: unless-stopped
 
 volumes:
   mysql-data:
